gccida/g2/ix86_emit_save_regs_using_mov
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_save_regs_using_mov/src/i386.c:4631:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), i); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_save_regs_using_mov/src/i386.c:4633:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_MEM( ( machine_mode)v5, pointer); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_save_regs_using_mov/src/i386.c:4634:30: error: use of undeclared identifier 'machine_mode'
v7 = adjust_address_1( v6, ( machine_mode)v5, offset, 1, 1); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_save_regs_using_mov/src/obj/i386.o] Error 1
